--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Three.js based object libary",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo "Error: no test specified" && exit 1"
   },
   "author": "Tom Mardis",
   "license": "ISC",
